Bug 69112 - Detaching the docking window leads to a wrong sized window
Summary: Detaching the docking window leads to a wrong sized window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All Windows (All)
: high normal
Assignee: Thomas Arnhold
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks: 68871
  Show dependency treegraph
 
Reported: 2013-09-08 18:40 UTC by Thomas Arnhold
Modified: 2013-11-13 09:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (76.60 KB, image/png)
2013-09-08 18:40 UTC, Thomas Arnhold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Arnhold 2013-09-08 18:40:06 UTC
Created attachment 85447 [details]
Screenshot

Steps to reproduce:

1. Open Math
2. Detach the docked formula window
3. The window has the wrong size (see Attachment)

Expected behavior:

Window should have the correct size.


Seems it's a missing initialization of the window height after the detach process.
Comment 1 Thomas Arnhold 2013-09-08 18:47:56 UTC
Present since 4.1. Here on Windows 7:

Version: 4.1.1.2
Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903
Comment 2 José Guilherme Vanz 2013-11-02 21:34:45 UTC
I couldn't reproduce it on master build, running on openSUSE.
Comment 3 Thomas Arnhold 2013-11-04 11:23:31 UTC
Seems to be Windows specific. Still reproducible on master with Windows. I tested other docked windows, like in the Slide preview in Impress, but the problem does not occur there.
Comment 4 Marcos Souza 2013-11-04 11:30:13 UTC
Maybe the problem is how our dock was implemented?

So, we'll needs some debugging on Windows :)
Comment 5 Thomas Arnhold 2013-11-12 17:22:51 UTC
To reproduce this with your (own) debug build on Windows, you have to have an empty profile. Delete %AppData/Roaming/LibreOfficeDev or instdir/user/registrymodifications.xcu (in the build tree). Otherwise the problem doesn't pop up or is very hard to reproduce.
Comment 6 Commit Notification 2013-11-13 09:05:28 UTC
Thomas Arnhold committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e667062310ed327dc0a9d338a9e26dc0e2ce865f

fdo#69112 - Detaching the docking window leads to a wrong sized window



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.