fdo#69112 - Detaching the docking window leads to a wrong sized window

Just fix it by setting an appropriate minimum window size.

It's set to 100px because this is approx. one column/row of elements.

Now, after entering the floating mode the height of the window is 100px.
Maybe this needs some more adjustment, but it's not 0px anymore.

Change-Id: I7b14d001bbca1d1a5297f875fdf424beefaed85a